--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,17 @@
     <artifactId>mysql-connector-j</artifactId>
     <version>8.3.0</version>
 </dependency>
-		  </dependencies>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+    <version>3.2.5</version>
+</dependency>
+		  <dependency>
+		  	<groupId>my.unit.test</groupId>
+		  	<artifactId>unit-test-assignment</artifactId>
+		  	<version>0.0.1-SNAPSHOT</version>
+		  </dependency>
+	  </dependencies>
 		  
 		   <build>
     <pluginManagement>
